Asenkron yapılandırmalara "EnableScheduling" eklendi. FamilyController'da ilişki döndürme metodu için dönüş tipi güncellendi. GameController'da CORS ayarları sabitler ile güncellendi. DTO'larda gereksiz metotlar kaldırıldı ve yeni geri bildirim yapısı eklendi. Frontend'de ilişki grafiği bileşenine yönlendirme seçeneği eklendi ve stil güncellemeleri yapıldı. Ayrıca, bazı bağımlılıklar güncellendi.